add: slider-one

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&display=swap"
       rel="stylesheet"
     />
 
@@ -86,9 +86,8 @@
                         <li><a href="index-6.html">Home Page 6</a></li> -->
                         </ul>
                       </li>
-                      <li><a href="about.html">About</a></li>
                       <li class="dropdown">
-                        <a href="service.html">Service</a>
+                        <a href="about.html">Rooms & Suites</a>
                         <ul class="submenu">
                           <li><a href="service.html">Service Page</a></li>
                           <li>
@@ -96,6 +95,15 @@
                           </li>
                         </ul>
                       </li>
+                      <!-- <li class="dropdown">
+                        <a href="service.html">Service</a>
+                        <ul class="submenu">
+                          <li><a href="service.html">Service Page</a></li>
+                          <li>
+                            <a href="service-details.html">Service Details Page</a>
+                          </li>
+                        </ul>
+                      </li> -->
                       <li class="dropdown">
                         <a href="project.html">Pages</a>
                         <ul class="submenu">
@@ -113,7 +121,7 @@
                         </ul>
                       </li>
                       <li class="dropdown">
-                        <a href="blog.html">Blog</a>
+                        <a href="blog.html">News</a>
                         <ul class="submenu">
                           <li><a href="blog.html">Blog Page</a></li>
                           <li>
@@ -127,7 +135,7 @@
                 </div>
                 <div class="search-btn-with-btn">
                   <div class="btn-wrapper">
-                    <a href="#" class="theme-btn">GET A QUOTE <i class="fa-solid fa-plus"></i></a>
+                    <a href="#" class="theme-btn">Book Now</a>
                   </div>
                 </div>
                 <!-- Mobile Menu Toggle Button Start !-->
@@ -193,9 +201,12 @@
     <div class="body-overlay"></div>
 
     <!-- Slider Section Start !-->
-    <div class="slider-area style-2 bg-gray-100">
-      <div class="slider-bg">
-        <img src="images/section-bg/bd-frame.png" alt="" />
+    <div
+      class="slider-area style-1 bg-gray-100"
+      style="background-image: url(images/hero-section/v-1/img-1.jpg)"
+    >
+      <div class="shape">
+        <img src="images/hero-section/logo-shape.png" alt="hotex" />
       </div>
       <div class="slider-wrapper">
         <!-- single slider start -->
@@ -206,20 +217,12 @@
                 <div class="col-12 col-lg-7 col-xxl-6 order-2 order-md-1">
                   <div class="slider-content-wrapper">
                     <div class="slider-content">
-                      <span class="slider-short-title">Best interior</span>
-                      <h1 class="slider-title">Where Inovation Meet Interior Design</h1>
-                      <p class="slider-short-desc">
-                        It is a long established fact that a reader will be distracted by the
-                        readablejk content of a page when looking at its layout.
-                      </p>
+                      <span class="slider-short-title">Embrace Life's Treasured Moments</span>
+                      <h1 class="slider-title">
+                        Life <span> enjoy </span> with the great <span> moments </span>
+                      </h1>
                       <div class="slider-btn-wrapper">
-                        <a href="about.html" class="simple-btn"
-                          >Learn More<i class="fa-solid fa-plus"></i
-                        ></a>
-                        <a href="#" class="theme-btn">contact us</a>
-                      </div>
-                      <div class="foundation-text">
-                        <h1>Since 2010</h1>
+                        <a href="about.html" class="simple-btn">Rooms & Suites</a>
                       </div>
                     </div>
                   </div>
@@ -227,7 +230,7 @@
                 <div class="col-12 col-lg-5 col-xxl-6 order-1 order-md-2">
                   <div class="slider-image">
                     <div class="slider-image-inner">
-                      <img src="images/slider/design.jpg" alt="feature image" />
+                      <img src="images/hero-section/small-hero-1.jpg" alt="feature image" />
                     </div>
                   </div>
                 </div>
@@ -244,20 +247,12 @@
                 <div class="col-12 col-lg-7 col-xxl-6 order-2 order-md-1">
                   <div class="slider-content-wrapper">
                     <div class="slider-content">
-                      <span class="slider-short-title">Best interior</span>
-                      <h1 class="slider-title">Where Inovation Meet Interior Design</h1>
-                      <p class="slider-short-desc">
-                        It is a long established fact that a reader will be distracted by the
-                        readablejk content of a page when looking at its layout.
-                      </p>
+                      <span class="slider-short-title">Embrace Life's Treasured Moments</span>
+                      <h1 class="slider-title">
+                        Life <span> enjoy </span> with the great <span> moments </span>
+                      </h1>
                       <div class="slider-btn-wrapper">
-                        <a href="about.html" class="simple-btn"
-                          >Learn More<i class="fa-solid fa-plus"></i
-                        ></a>
-                        <a href="#" class="theme-btn">contact us</a>
-                      </div>
-                      <div class="foundation-text">
-                        <h1>Since 2010</h1>
+                        <a href="about.html" class="simple-btn">Rooms & Suites</a>
                       </div>
                     </div>
                   </div>
@@ -265,7 +260,7 @@
                 <div class="col-12 col-lg-5 col-xxl-6 order-1 order-md-2">
                   <div class="slider-image">
                     <div class="slider-image-inner">
-                      <img src="images/slider/design.jpg" alt="feature image" />
+                      <img src="images/hero-section/small-hero-1.jpg" alt="feature image" />
                     </div>
                   </div>
                 </div>
@@ -282,20 +277,12 @@
                 <div class="col-12 col-lg-7 col-xxl-6 order-2 order-md-1">
                   <div class="slider-content-wrapper">
                     <div class="slider-content">
-                      <span class="slider-short-title">Best interior</span>
-                      <h1 class="slider-title">Where Inovation Meet Interior Design</h1>
-                      <p class="slider-short-desc">
-                        It is a long established fact that a reader will be distracted by the
-                        readablejk content of a page when looking at its layout.
-                      </p>
+                      <span class="slider-short-title">Embrace Life's Treasured Moments</span>
+                      <h1 class="slider-title">
+                        Life <span> enjoy </span> with the great <span> moments </span>
+                      </h1>
                       <div class="slider-btn-wrapper">
-                        <a href="about.html" class="simple-btn"
-                          >Learn More<i class="fa-solid fa-plus"></i
-                        ></a>
-                        <a href="#" class="theme-btn">contact us</a>
-                      </div>
-                      <div class="foundation-text">
-                        <h1>Since 2010</h1>
+                        <a href="about.html" class="simple-btn">Rooms & Suites</a>
                       </div>
                     </div>
                   </div>
@@ -303,7 +290,7 @@
                 <div class="col-12 col-lg-5 col-xxl-6 order-1 order-md-2">
                   <div class="slider-image">
                     <div class="slider-image-inner">
-                      <img src="images/slider/design.jpg" alt="feature image" />
+                      <img src="images/hero-section/small-hero-1.jpg" alt="feature image" />
                     </div>
                   </div>
                 </div>
