add: about-us-area style-1

--- a/about.html
+++ b/about.html
@@ -254,7 +254,7 @@
                 <div class="section-title">
                   <div class="sec-content">
                     <div class="short-title-wrapper">
-                      <h5 class="short-title only-divider">about us</h5>
+                      <h5 class="short-title">about us</h5>
                     </div>
                     <h2 class="title">Elevate Your Lifestyle with our Meets Interior Design</h2>
                     <p class="desc">
@@ -415,7 +415,7 @@
             <div class="section-title mb-0">
               <div class="sec-content">
                 <div class="short-title-wrapper">
-                  <span class="short-title only-divider">Clients Testimonials</span>
+                  <span class="short-title">Clients Testimonials</span>
                 </div>
                 <h2 class="title">Unleash the Potential of your Interiors</h2>
                 <div class="slider-nav-btn-wrapper mt-50">
