--- a/service.html
+++ b/service.html
@@ -436,7 +436,7 @@
             <div class="section-title two-column">
               <div class="sec-content">
                 <span class="short-title-wrapper">
-                  <span class="short-title only-divider">working process</span>
+                  <span class="short-title">working process</span>
                 </span>
                 <h2 class="title">
                   Creating Beautiful Spaces <br />
