add: service-area style-1

--- a/index.html
+++ b/index.html
@@ -611,6 +611,98 @@
     </div>
     <!-- Room and suites End -->
 
+    <!-- Hotel Facilities Start -->
+    <div
+      class="service-area style-1"
+      style="background-image: url(images/section-bg/service-area.jpg)"
+    >
+      <div class="container">
+        <div class="section-title mb-0 style-2">
+          <div class="sec-content">
+            <h5 class="short-title text-white">Hotex SERVICES</h5>
+            <h2 class="title text-white">Hotel Facilities</h2>
+          </div>
+        </div>
+        <div class="card-wrapper">
+          <div class="row gy-4">
+            <div class="col-md-6 col-lg-4">
+              <!-- single service-card start -->
+              <div class="info-card style-1">
+                <div class="icon">
+                  <img src="images/icon/info-card/v-1/yellow-car.png" alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">Parking Space</h3>
+                  <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <!-- single service-card start -->
+              <div class="info-card style-1">
+                <div class="icon">
+                  <img src="images/icon/info-card/v-1/yellow-bed.png" alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">Room Service</h3>
+                  <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <!-- single service-card start -->
+              <div class="info-card style-1">
+                <div class="icon">
+                  <img src="images/icon/info-card/v-1/laptop.png" alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">WIFI Facility</h3>
+                  <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <!-- single service-card start -->
+              <div class="info-card style-1">
+                <div class="icon">
+                  <img src="images/icon/info-card/v-1/dish.png" alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">Complement Breakfast</h3>
+                  <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <!-- single service-card start -->
+              <div class="info-card style-1">
+                <div class="icon">
+                  <img src="images/icon/info-card/v-1/swimming-pool.png" alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">Swimming Pool</h3>
+                  <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <!-- single service-card start -->
+              <div class="info-card style-1">
+                <div class="icon">
+                  <img src="images/icon/info-card/v-1/location.png" alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">Pick Up & Drop</h3>
+                  <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Hotel Facilities End -->
+
     <!-- Feature Area Start-->
     <div class="feature-area style-2">
       <div class="container">
