--- a/index.html
+++ b/index.html
@@ -703,6 +703,79 @@
     </div>
     <!-- Hotel Facilities End -->
 
+    <!-- About Us Area Start !-->
+    <div class="about-us-area style-2 py-120">
+      <div class="container">
+        <div class="row gy-5 justify-content-between">
+          <div class="col-lg-6">
+            <div class="about-image-card style-2">
+              <div class="right-bar">
+                <div class="inner-wrapper">
+                  <span class="short-bar"></span>
+                  <span class="circle"></span>
+                </div>
+              </div>
+              <div class="image-wrapper">
+                <!-- images module -->
+                <div class="main-img">
+                  <img src="images/image-card/img-2.jpg" alt="about card img" />
+                  <div class="shape">
+                    <img src="images/shape/image-card-shape-2.png" alt="image-card-shape" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-5">
+            <div class="about-info-card style-2">
+              <div class="about-info-content">
+                <!-- heading -->
+                <div class="section-title mb-0">
+                  <div class="sec-content">
+                    <h5 class="short-title">Hotel Facility</h5>
+                    <h2 class="title">Let’s Make Something Beautiful Together</h2>
+                    <h4 class="para mt-0 mb-20">
+                      Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
+                    </h4>
+                    <p class="sec-desc">
+                      Proin efficitur, mauris vel condimentum pulvinar, velit orci consectetur
+                      ligula, eget egestas magna mi ut arcu. Phasellus nec odio orci. Nunc id massa
+                      ante. Suspendisse sit amet neque euismod, convallis quam eget, dignissim
+                      massa. Aliquam blandit risus purus, in congue nunc venenatis id. Pellentesque
+                      habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                      egestas.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="counter-card-wrapper">
+                  <div class="counter-card style-1">
+                    <h3 class="count-content">
+                      <span class="counter">50</span>
+                      M
+                      <span>+ </span>
+                    </h3>
+                    <h4 class="title">Active Users</h4>
+                    <p class="desc">Proin efficitur, mauris vel condimentum pulvinar,</p>
+                  </div>
+                  <div class="counter-card style-1">
+                    <h3 class="count-content">
+                      <span class="counter">60</span>
+                      %
+                    </h3>
+                    <h4 class="title">Performance</h4>
+                    <p class="desc">Proin efficitur, mauris vel condimentum pulvinar,</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- About Us Area End !-->
+
     <!-- Feature Area Start-->
     <div class="feature-area style-2">
       <div class="container">
