working on testimonial

--- a/index.html
+++ b/index.html
@@ -927,6 +927,32 @@
     </div>
     <!-- Feature and facilities End -->
 
+    <!-- Testimonial area styel-1 start -->
+    <div class="testimonial-area">
+      <div class="container">
+        <div class="banner-text">
+          <p>Testimonial</p>
+        </div>
+        <div class="testimonial-slider">
+          <div class="testimonial-card">
+            <div class="icon">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h3 class="title">
+              “Been there with my family. Beautiful place, definitely
+              recommended. Children also enjoyed it very much”
+            </h3>
+            <p class="desc">Jane Cooper, USA</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Testimonial area styel-1 end -->
+
     <!-- Feature Area Start-->
     <div class="feature-area style-2">
       <div class="container">
