add: testimonial-slider area

--- a/index.html
+++ b/index.html
@@ -887,39 +887,43 @@
     <!-- About Us Area End !-->
 
     <!-- Feature and facilities Start -->
-    <div
-      class="feature-and-facilities style-1 py-80"
-      style="background-image: url(images/section-bg/feature-facilities.jpg)">
-      <div class="overlay"></div>
+    <div class="feature-and-facilities style-1">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-1"></div>
-          <div class="col-lg-5">
-            <div class="section-title mb-0">
-              <div class="sec-content">
-                <h5 class="short-title">Special Features & Facilities</h5>
-                <h2 class="title">Experience Luxury At Our Hotel</h2>
+        <div
+          class="inner-wrapper py-80"
+          style="
+            background-image: url(images/section-bg/feature-facilities.jpg);
+          ">
+          <div class="overlay"></div>
+          <div class="row">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-5">
+              <div class="section-title mb-0">
+                <div class="sec-content">
+                  <h5 class="short-title">Special Features & Facilities</h5>
+                  <h2 class="title">Experience Luxury At Our Hotel</h2>
+                </div>
               </div>
-            </div>
-            <div class="btn-wrapper">
-              <a href="#" class="btn">
-                #2 Pools
-                <span>
-                  <i class="fa-solid fa-arrow-down-long"></i>
-                </span>
-              </a>
-              <a href="#" class="btn">
-                #3 Fitness Center
-                <span>
-                  <i class="fa-solid fa-arrow-down-long"></i>
-                </span>
-              </a>
-              <a href="#" class="btn">
-                #2 Restaurants
-                <span>
-                  <i class="fa-solid fa-arrow-down-long"></i>
-                </span>
-              </a>
+              <div class="btn-wrapper">
+                <a href="#" class="btn">
+                  #2 Pools
+                  <span>
+                    <i class="fa-solid fa-arrow-down-long"></i>
+                  </span>
+                </a>
+                <a href="#" class="btn">
+                  #3 Fitness Center
+                  <span>
+                    <i class="fa-solid fa-arrow-down-long"></i>
+                  </span>
+                </a>
+                <a href="#" class="btn">
+                  #2 Restaurants
+                  <span>
+                    <i class="fa-solid fa-arrow-down-long"></i>
+                  </span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -944,7 +948,41 @@
             </div>
             <h3 class="title">
               “Been there with my family. Beautiful place, definitely
-              recommended. Children also enjoyed it very much”
+              recommended.
+              <br />
+              Children also enjoyed it very much”
+            </h3>
+            <p class="desc">Jane Cooper, USA</p>
+          </div>
+          <div class="testimonial-card">
+            <div class="icon">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h3 class="title">
+              “Been there with my family. Beautiful place, definitely
+              recommended.
+              <br />
+              Children also enjoyed it very much”
+            </h3>
+            <p class="desc">Jane Cooper, USA</p>
+          </div>
+          <div class="testimonial-card">
+            <div class="icon">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h3 class="title">
+              “Been there with my family. Beautiful place, definitely
+              recommended.
+              <br />
+              Children also enjoyed it very much”
             </h3>
             <p class="desc">Jane Cooper, USA</p>
           </div>
@@ -952,6 +990,43 @@
       </div>
     </div>
     <!-- Testimonial area styel-1 end -->
+
+    <!-- Team area Start -->
+    <div class="team-area style-1 py-140">
+      <div class="container">
+        <div class="section-title mb-0 style-2">
+          <div class="sec-content">
+            <h5 class="short-title">Hotex SERVICES</h5>
+            <h2 class="title">Expert Team Persons</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="team-slider">
+              <div class="team-card">
+                <div class="image-wrapper">
+                  <img
+                    src="images/team-member/v-1/image-1.jpg"
+                    alt="team member" />
+                  <div class="overlay"></div>
+                </div>
+                <div class="info-wrapper">
+                  <h3 class="name">John Doe</h3>
+                  <p class="designation">Manager</p>
+                  <div class="social-links">
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Team area end -->
 
     <!-- Feature Area Start-->
     <div class="feature-area style-2">
