--- a/index.html
+++ b/index.html
@@ -993,8 +993,11 @@
 
     <!-- Team area Start -->
     <div class="team-area style-1 py-140">
+      <div class="shape">
+        <img src="images/shape/leaf.png" alt="image-card-shape" />
+      </div>
       <div class="container">
-        <div class="section-title mb-0 style-2">
+        <div class="section-title mb-60 style-2">
           <div class="sec-content">
             <h5 class="short-title">Hotex SERVICES</h5>
             <h2 class="title">Expert Team Persons</h2>
@@ -1002,24 +1005,95 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-            <div class="team-slider">
-              <div class="team-card">
-                <div class="image-wrapper">
-                  <img
-                    src="images/team-member/v-1/image-1.jpg"
-                    alt="team member" />
-                  <div class="overlay"></div>
+            <div class="team-member-card">
+              <div class="image-wrapper">
+                <img
+                  src="images/team-member/v-1/image-1.jpg"
+                  alt="team member" />
+                <div class="overlay"></div>
+              </div>
+              <div class="content-wrapper">
+                <h3 class="title">Michael Dean</h3>
+                <div class="content pl-16">
+                  <p class="desc">Event Planner</p>
+                  <i class="fa-solid fa-arrow-down-long"></i>
                 </div>
-                <div class="info-wrapper">
-                  <h3 class="name">John Doe</h3>
-                  <p class="designation">Manager</p>
-                  <div class="social-links">
-                    <a href="#">
-                      <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="#"></a>
-                  </div>
+              </div>
+              <div class="social-links">
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-pinterest-p"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="team-member-card">
+              <div class="image-wrapper">
+                <img
+                  src="images/team-member/v-1/image-2.jpg"
+                  alt="team member" />
+                <div class="overlay"></div>
+              </div>
+              <div class="content-wrapper">
+                <h3 class="title">Michael Dean</h3>
+                <div class="content pl-16">
+                  <p class="desc">Event Planner</p>
+                  <i class="fa-solid fa-arrow-down-long"></i>
                 </div>
+              </div>
+              <div class="social-links">
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-pinterest-p"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="team-member-card">
+              <div class="image-wrapper">
+                <img
+                  src="images/team-member/v-1/image-3.jpg"
+                  alt="team member" />
+                <div class="overlay"></div>
+              </div>
+              <div class="content-wrapper">
+                <h3 class="title">Michael Dean</h3>
+                <div class="content pl-16">
+                  <p class="desc">Event Planner</p>
+                  <i class="fa-solid fa-arrow-down-long"></i>
+                </div>
+              </div>
+              <div class="social-links">
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-pinterest-p"></i>
+                </a>
               </div>
             </div>
           </div>
