add: booking-area

--- a/index.html
+++ b/index.html
@@ -992,7 +992,7 @@
     <!-- Testimonial area styel-1 end -->
 
     <!-- Team area Start -->
-    <div class="team-area style-1 py-140">
+    <div class="team-area style-1 pt-140">
       <div class="shape">
         <img src="images/shape/leaf.png" alt="image-card-shape" />
       </div>
@@ -1101,6 +1101,127 @@
       </div>
     </div>
     <!-- Team area end -->
+
+    <!-- Booking-area Start -->
+    <div class="booking-area pt-70">
+      <div class="container">
+        <div class="shape-wrapper">
+          <div class="shape">
+            <img src="images/shape/booking-shape.png" alt="curve-right" />
+          </div>
+        </div>
+        <div class="shape-2">
+          <img src="images/shape/booking-shape-2.png" alt="curve-left" />
+        </div>
+        <div class="row justify-content-end">
+          <div class="col-lg-4">
+            <div class="booking-form">
+              <p class="sub-title mb-20">ROOMS & SUITES</p>
+              <h2 class="title">Hotel Booking</h2>
+              <form class="mt-16">
+                <div class="form-group">
+                  <label for="checkin">Check In:</label>
+                  <input
+                    type="date"
+                    id="checkin"
+                    name="checkin"
+                    placeholder="13 , April 2024" />
+                  <i class="fa-regular fa-calendar-days"></i>
+                </div>
+
+                <div class="form-group">
+                  <label for="checkout">Check Out:</label>
+                  <input
+                    type="date"
+                    id="checkout"
+                    name="checkout"
+                    placeholder="13 April 2024" />
+                  <i class="fa-regular fa-calendar-days"></i>
+                </div>
+
+                <div class="form-group">
+                  <label for="room">Room:</label>
+                  <select id="room" name="room">
+                    <option value="standard">Standard Room Size</option>
+                    <option value="deluxe">Deluxe Room Size</option>
+                    <option value="suite">Suite Room Size</option>
+                  </select>
+                </div>
+
+                <button type="submit" class="submit-btn">Check Now</button>
+              </form>
+            </div>
+          </div>
+          <div class="col-lg-7">
+            <div class="about-us-area">
+              <div class="row justify-content-between align-items-center">
+                <div class="col-lg-5">
+                  <div class="about-image-card style-3">
+                    <div class="right-bar">
+                      <div class="inner-wrapper">
+                        <span class="short-bar"></span>
+                        <span class="circle"></span>
+                      </div>
+                    </div>
+                    <div class="image-wrapper">
+                      <!-- images module -->
+                      <div class="main-img">
+                        <img
+                          src="images/image-card/img-3.jpg"
+                          alt="about card img" />
+                        <div class="shape">
+                          <img
+                            src="images/shape/image-card-shape-4.png"
+                            alt="image-card-shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-7">
+                  <div class="about-info-card style-2 pl-60">
+                    <div class="about-info-content">
+                      <div class="section-title mb-0">
+                        <div class="sec-content">
+                          <h5 class="short-title">Hotel Facility</h5>
+                          <h2 class="title">Enjoy a Luxury Experience</h2>
+                          <p class="sec-desc">
+                            Each of our guest rooms feature a private bath,
+                            wi-fi, cable television and include full breakfast.
+                            Mea nibh meis philosophia eu. Duis legimus
+                            efficiantur ea sea. Id placerat tacimates
+                            definitionem sea, prima quidam vim no. Duo nobis
+                            persecuti cu.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="booking-btn mt-25">
+                      <div class="image">
+                        <img src="images/icon/clock.png" />
+                      </div>
+                      <div class="content">
+                        <p>Booking Now</p>
+                        <a href="#">123456789</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="contact-info pt-20 ml-n5">
+              <div class="icon">
+                <img src="images/icon/location.svg" alt="location" />
+              </div>
+              <h3 class="desc">
+                Contact us for incredible interior & architect designs.
+              </h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Booking-area End -->
 
     <!-- Feature Area Start-->
     <div class="feature-area style-2">
